Fixing some bugs